tests/paczka1/small_fuzzy/98444573.err
Error in line 4: sGs0ll S840 34,7
Error in line 9: 8VFUfS5 A428 12,7
